# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  CUserssonis.configsolanaid.json  DEVNET_PROOF.md  PULL_REQUEST_DESCRIPTION.md  README.md  bounty.md  demo-full-lifecycle.sh  docker-compose.yml  package-lock.json  package.json  run-devnet-lifecycle.ts  tsconfig.json  version.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  docker-compose.yml  package.json
backend/src/services/compliance/: index.ts
backend/src/services/indexer/: index.ts
backend/src/services/mint-burn/: index.ts
backend/src/services/webhook/: index.ts
backend/src/shared/: config.ts  health.ts  logger.ts  signer.ts
cli/: package-lock.json  package.json  tsconfig.json  tui.ts
cli/src/: App.tsx  config.ts  index.ts
cli/src/commands/: audit.ts  burn.ts  compliance.ts  freeze.ts  holders.ts  init.ts  mint.ts  minters.ts  pause.ts  status.ts
cli/tests/: cli.test.ts  smoke.test.js
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  test_rpc.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: WalletContextProvider.tsx
frontend/src/hooks/: useSSS.ts
frontend/src/lib/: idl.json
modules/sss-common/: Cargo.toml
modules/sss-common/src/: lib.rs  seeds.rs  validation.rs
programs/basket-vault/: Cargo.toml
programs/basket-vault/src/: errors.rs  events.rs  lib.rs  state.rs
programs/basket-vault/src/instructions/: initialize.rs  mint_against_collateral.rs  mod.rs  register_asset.rs  set_crisis_mode.rs  set_minting_paused.rs  update_asset_price.rs  update_asset_price_from_oracle.rs  update_weights.rs
programs/sss-oracle/: Cargo.toml
programs/sss-oracle/src/: errors.rs  events.rs  lib.rs  state.rs
programs/sss-oracle/src/instructions/: initialize.rs  mod.rs  quote.rs  transfer_authority.rs  update_price.rs
programs/sss-stablecoin/: Cargo.toml
programs/sss-stablecoin/src/: errors.rs  events.rs  lib.rs
programs/sss-stablecoin/src/instructions/: burn.rs  compliance.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs
programs/sss-stablecoin/src/state/: blacklist.rs  config.rs  minter_quota.rs  mod.rs  pause.rs  roles.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
rust/lib/rustlib/sbf-solana-solana/lib/: libaddr2line-425a62c8c56bb807.rlib  libadler2-44fe8ed44fa918e8.rlib  libcfg_if-663acf1865415574.rlib  libcompiler_builtins-a29218ad213e9c48.rlib  libgetopts-a89b3490df568648.rlib  libhashbrown-f6cf1d9a8ba7586b.rlib  liblibc-e9dcfdda5274b2d5.rlib  libmemchr-4fd06ed61bd5f59a.rlib  libminiz_oxide-44294aa03f1162ae.rlib  libpanic_abort-bae53439987d9d9c.rlib  libpanic_unwind-322e5f0b76b5f2e3.rlib  libproc_macro-014f9fb62657518e.rlib  librustc_literal_escaper-5d0f674dead180ba.rlib  librustc_std_workspace_alloc-80af40d79e4b6f6c.rlib  (+7 more)
scripts/: deploy-and-proof.sh  multisig-authority-transfer.ts  test-cli.sh
sdk/core/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json
sdk/core/dist-test/src/: compliance.js  errors.js  idl.json  index.js  oracle.js  presets.js  stablecoin.js  types.js
sdk/core/dist-test/tests/: sdk-advanced.js  sdk.test.js
sdk/core/src/: compliance.ts  errors.ts  idl.json  index.ts  instructions.ts  oracle.ts  presets.ts  stablecoin.ts  types.ts
sdk/core/src/accounts/: index.ts
sdk/core/tests/: sdk-advanced.ts  sdk.test.ts  smoke.ts
tests/: basket-vault.ts  sss-1-advanced.ts  sss-1.ts  sss-2-advanced.ts  sss-2.ts  sss-3.ts  sss-lifecycle.ts  sss-oracle.ts  test.md
tests/helpers/: setup.ts
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/fuzz_tests/fuzz_0/: Cargo.toml
trident-tests/fuzz_tests/fuzz_0/corpus/: seed_add_minter  seed_blacklist  seed_burn  seed_initialize  seed_mint  seed_overflow_mint  seed_pause  seed_unauth_mint
trident-tests/fuzz_tests/fuzz_0/src/: accounts_snapshots.rs  fuzz_instructions.rs
(+86 files in other folders)
