[workspace]
members = [
    "programs/sss-stablecoin",
    "programs/sss-transfer-hook",
    "programs/sss-oracle",
    "modules/sss-common",
]
exclude = [
    "trident-tests",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
spl-token-2022 = "8.0.0"
spl-transfer-hook-interface = "0.10.0"

[profile.release]
overflow-checks = true
lto = "thin"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
