[package]
name = "sss-oracle"
version = "0.1.0"
edition = "2021"
description = "SSS Oracle — Switchboard price feed adapter for non-USD stablecoin pegs"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_oracle"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
