[package]
name = "sss-stablecoin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_stablecoin"

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token_2022"] }
spl-token-2022 = { workspace = true }
sss-common = { path = "../../modules/sss-common" }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
