[package]
name = "sss-transfer-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = "0.10.0"
sss-common = { path = "../../modules/sss-common" }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
